# sds

./: .coveragerc_unit  .coveragerc_unit_deprecated  .gitignore  .mega-linter.yml  CHANGELOG.md  Dockerfile  Dockerfile.develop  Makefile  Publish_schema.py  README.md  Slack_posts.py  TODO  build-cloud-function.sh  cloudbuild-dev.yaml  cloudbuild-image-tag.yaml  cloudbuild-preprod.yaml  cloudbuild-prod.yaml  cloudbuild-python.yml  cloudbuild.yaml  cloudbuild.yml  docker-compose.yml  preprod-tag.yaml  pyproject.toml  requirements.txt  run.sh  sds_sequence_diagram.uxf
.github/: pull_request_template.md
.github/scripts/: bump_version.py  check_version.py  generate_openapi.py  get_version.py  increment_version.py
.github/workflows/: build  check-version.yaml  lint-and-test.yml  lint_and_tests.yml  main.yml  mega-linter.yml  on_pr.yml  on_push.yml  publish-image-on-release.yml  publish-latest-image-on-merge.yml  publish-main-image.yml  pull_request  pull_request.yml  python.yml  unit-test-and-lint.yml
app/: config.py  dependencies.py  main.py
app/config/: config.py  config_factory.py
app/config-to-be-deleted/: config_factory.py  config_helpers.py
app/exception/: exception_interceptor.py  exception_responder.py  exception_response_models.py  exceptions.py
app/interfaces/: dataset_deletion_repository_interface.py  dataset_storage_repository_interface.py  schema_storage_repository_interface.py
app/models/: collection_exericise_end_data.py  dataset_models.py  schema_models.py
app/repositories/buckets/: bucket_loader.py  bucket_repository.py  schema_bucket_repository.py
app/repositories/dataset_deletion/: firestore_dataset_deletion_repository.py
app/repositories/dataset_storage/: firestore_dataset_storage_repository.py
app/repositories/firebase/: dataset_firebase_repository.py  deletion_firebase_repository.py  firebase_loader.py  schema_firebase_repository.py
app/routers/: dataset_router.py  dataset_router_restful.py  schema_router.py  schema_router_restful.py  status_router.py
app/services/: dataset_service.py  schema_service.py
app/util/: firebase_loader.py
devtools/: SDS - Endpoints Tester - Deprecated.postman_collection.json  SDS - Endpoints Tester.postman_collection.json  SDS - Local Docker.postman_collection.json  cloudfunction_new_dataset.Dockerfile  local_dev.Dockerfile  thunder-collection_Local Development - SDS-v1.json  thunder-collection_Local Development - SDS.json
devtools/dataset-publisher/: Dockerfile  README.md  app.py  config_factory.py  main.py
devtools/firebase-emulator/: firebase.json
gateway/: openapi.yaml
generate_openapi/: openapi.yaml
integration_tests/: app_test.py  conftest.py  database_test.py  scratch.py
integration_tests/data/: data_set.json  dataset.json  publish_dataset.json  query_datasets.json  query_datasets_by_survey_id.json  query_schemas.json  schema.json
integration_tests/datasets/: dataset_endpoints_integration_test.py
integration_tests/helpers/: bucket_helpers.py  firestore_helpers.py  integration_helpers.py  pubsub_helper.py
integration_tests/schemas/: schema_endpoints_integrations_test.py
integration_tests/status/: status_router_integration_test.py
samples/: README.md  sds_master_schema_for_schemas.json  test_validation.py
samples/BRES/: bres_sds_data.json  bres_sds_schema_for_data.json
samples/BRS/: brs_sds_data.json  brs_sds_schema_for_data.json
scripts/: deploy_to_dev_project.sh  generate_key.sh  generate_openapi.py  initialise_project.sh  upload_schema.py
src/: app.py  app_test.py  client.py  conftest.py  constants.py  content_types.py  database.py  database_test.py  errors.py  paths.py  scatch.py  scratch.py  status_codes.py
src/app/: app.py  bucket_file_reader.py  config.py  database.py  dataset_storage.py  encryption.py  exception_throw.py  logging_config.py  main.py  models.py  requirements.txt  storage.py
src/cloud_functions/: database.py  main.py
src/e2e_tests/: conftest.py
src/integration_tests/: cloudrun_test.py  conftest.py  database_test.py  event_arc_test.py  integration_tests.py  local_tests.py  scratch.py
src/mapping/: survey_map.json
src/performance_tests/: locustfile.py  service.yaml
src/test_data/: dataset.json  dataset_test_data.py  fake_key_file.json  schema.json  schema_test_data.py  shared_test_data.py
src/unit_tests/: app_test.py  config_test.py  conftest.py  database_test.py  dataset_storage_test.py  encryption_test.py  main_test.py  storage_test.py  test_helper.py  test_schema.json
src/utilities/: publish.py  response.py
test/integration/: app_test.py  conftest.py
test/unit/: app_test.py  database_test.py
test_data/: dataset_test_data.py  schema_test_data.py
tests/: dataset_endpoints_integration_test.py  status_router_integration_test.py
tests/integration_tests/: conftest.py
tests/test_config/: endpoints.py  endpoints_loader.py
tests/test_data/: dataset_test_data.py  schema_test_data.py  shared_test_data.py
tests/unit_tests/: conftest.py
unit_tests/: conftest.py
unit_tests/config/: config_factory_test.py
unit_tests/dataset/: get_dataset_metadata_collection_test.py  get_unit_supplementary_data_test.py
unit_tests/schema/: get_schema_from_bucket_test.py  get_schema_metadata_collection_test.py  post_schema_test.py
unit_tests/service/: test_dataset_deletion_service.py
(+170 files in other folders)
