[project]
name = "sds"
version = "2.2.2"
description = "Supplementary Data Service"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.118.0",
    "uvicorn===0.37.0",
    "gunicorn==23.0.0",
    "pytest==8.4.2",
    "pydantic_settings==2.11.0",
    "python-dotenv==1.1.1",
    "httpx==0.28.1",
    "firebase_admin==7.1.0",
    "jsonschema==4.25.1",
    "coverage==7.10.7",
    "pytest-cov==7.0.0",
    "pytest-order==1.3.0",
    "functions-framework==3.9.2",
    "google-cloud-firestore==2.21.0",
    "google-cloud-storage==3.4.0",
    "google-cloud-pubsub==2.31.1",
    "google-cloud-scheduler==2.16.1",
    "pip_audit==2.9.0",
    "pyyaml==6.0.3",
    "ruff==0.13.2",
    "setuptools==80.9.0",
    "tomlkit==0.13.3",
]

[dependency-groups]
version-check = [
 "toml>=0.10.2",
 "tomlkit>=0.13.3",
]

[tool.ruff]
line-length = 120
indent-width = 4
exclude = ["integration_tests", "unit_tests", "test_data"]

[tool.ruff.lint]
select = [
    # Enabling ALL is not recommended it will implicitly enable new rules after upgrade.
    # "ALL",

    # Ruff rules: https://docs.astral.sh/ruff/rules/

    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "I",      # isort
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "S",      # flake8-bandit
    #"D",      # pydocstyle - Enforce existing docstrings only
    "C90",    # mccabe
    "RUF",    # Ruff specific rules

    # PL - Pylint is only partially supported, we also use the pylint tool to catch all the rules.
    # It is enabled here to take advantage of the ruff's speed.
    "PL",
]

ignore = [
    # Conflicts with google docstring style
    "D205",
    # Allow missing docstring, remove to enforce docstrings across the board
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    # Disable line length check as it is handled by black
    # :TODO: Remove E501 when ruff supports all black rules
    "E501",
    # indentation contains tabs
    "W191",

    # SDS SPECIFIC BELOW THIS LINE
    # Function call as default argument
#    "B008",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    # Whitelisted default arguments
    "fastapi.Depends",
    "fastapi.Body",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # Allow use of assert statements in tests
    "S101",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"